Added getting ESDT/NFT/SFT by identifier
